--- a/app/src/main/assets/PrivacyPolicy.html
+++ b/app/src/main/assets/PrivacyPolicy.html
@@ -102,7 +102,7 @@
 <h3>Collected Analytics Data</h3>
 
 <p>
-    The Application uses the crashlytics framework to track freqent crashes and
+    The Application uses the crashlytics framework to track frequent crashes and
     development errors. So the Application may collect certain information
     automatically, including, but not limited to, the device's operating
     system name, operating system version, Android ID and Android
