Updated privacy policy to right mail

--- a/app/src/main/assets/PrivacyPolicy.html
+++ b/app/src/main/assets/PrivacyPolicy.html
@@ -162,7 +162,7 @@
 <p>
     If you have any questions regarding privacy while using the
     Application, or have questions about our practices, please contact me
-    via email at poeschl_markus[a]web.de or over the <a
+    via email at poeschipu[a]gmail.com or over the <a
         href="https://bitbucket.org/Poeschl/tryandremove/issues">issue
     tracker on the bitbucket repository</a>.
 </p>
