Corrected issue tracker link in privacy policy

--- a/app/src/main/assets/PrivacyPolicy.html
+++ b/app/src/main/assets/PrivacyPolicy.html
@@ -163,8 +163,8 @@
     If you have any questions regarding privacy while using the
     Application, or have questions about our practices, please contact me
     via email at poeschipu[a]gmail.com or over the <a
-        href="https://bitbucket.org/Poeschl/tryandremove/issues">issue
-    tracker on the bitbucket repository</a>.
+        href="https://github.com/Poeschl/TryAndRemove/issues">issue
+    tracker on github</a>.
 </p>
 </body>
 </html>
